# kvcached

./: .gitignore  .gitmodules  .license-header.txt  .pre-commit-config.yaml  MANIFEST.in  README.md  kvcached_autopatch.pth  pyproject.toml  requirements.txt  setup.py  test.py
.gemini/: config.yaml
.github/workflows/: pre-commit.yml
assets/: uc-icons.pptx
assets/ttft_results/: plot_ttft.py
benchmarks/bench_alloc/: README.md  bench_alloc.py
benchmarks/bench_kvcached_overhead/: README.md  start_client.sh  start_server.sh
benchmarks/bench_latency_benefit/: analyze_results.py  bench-config.yaml  bench_kvcached_vllm.py  plot_request_rate.py  run_benchmark.sh  start_vllm_server.sh
benchmarks/bench_layout/: README.md  diff_nsys_kernels.py  parse_results.py  run_kvcached_configs.sh  run_layout_retest.sh  run_ncu_attn.sh  run_nsys_layout.sh  run_sweep.sh
benchmarks/gsm8k/: README.md  (+2 more)
controller/: README.md  benchmark.py  example-config.yaml  frontend.py  launch.py  router.py  sleep_manager.py  traffic_monitor.py  utils.py
csrc/: allocator.cpp  ftensor.cpp  page.cpp  page_allocator.cpp  torch_bindings.cpp
docker/: Dockerfile.dev  Dockerfile.sglang  Dockerfile.vllm  README.md
kvcached/: __init__.py  autopatch.py  kv_cache_manager.py  locks.py  logging_config.py  mem_info_tracker.py  ops.py  page_allocator.py  slab_allocator.py  tp_ipc_util.py  utils.py
simulator/: allocator.py  dummy_executor.py  llm_engine.py  scheduler.py  simulator.py
test/: bench_page_prealloc.py  test_kvcache_manager.py  test_kvcached.py  test_multi_processing_read_mem_usage.py  test_shm.py  test_shm_client.py  test_shm_info_tracker.py  test_simulator.py
tests/: bench_page_prealloc.py  test_ElasticMLAMemoryPool.py  test_alloc_kv_cache_alignment.py  test_elastic_serving.py  test_kvcache_manager.py  test_make_cache_key.py  test_multi_processing_read_mem_usage.py  test_offline_serving.py  test_paged_allocator_aliasing.py  test_prefix_cache.py  test_shm.py  test_shm_info_tracker.py  test_sleep_manager.py  test_traffic_monitor.py  test_utils.py  test_vllm_nixl_compat.py
tools/: addlicense.sh  dev_copy_pth.py  mypy-strict.sh  mypy.sh  run_vllm_nixl_pd_smoke.sh
(+1755 files in other folders)
